# flashkeras

./: .gitignore  EzSequential.py  README.md  __init__.py  ptythio.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
analysing/: __init__.py  images.py  models.py
flashkeras/: __init__.py
flashkeras/analysing/: images.py  models.py
flashkeras/analysing/graphs/: __init__.py  line_graphs.py
flashkeras/data_collecting/: __init__.py  dataframes.py  image.py  matrix_like.py
flashkeras/data_collecting/datasets/: __init__.py  image.py  matrix_like.py
flashkeras/evaluation/: FlashEvaluating.py  __init__.py
flashkeras/models/: FlashSequential.py  __init__.py
flashkeras/models/layers/: __init__.py  layers.py
flashkeras/models/transferlearning/: FlashTransferLearning.py  __init__.py
flashkeras/preprocessing/: FlashPreProcessing.py  __init__.py
flashkeras/preprocessing/images/: FlashDataGenerator.py  __init__.py
flashkeras/utils/: kerasimports.py  otherimports.py  typehints.py
models/: FlashSequential.py  __init__.py
models/transferlearning/: FlashTransferLearning.py  TransferLearning.py
preprocessing/: FlashPreProcessing.py  __init__.py
preprocessing/images/: FlashDataGenerator.py
transferlearning/: TransferLearning.py
utils/: filesutils.py  kerasimports.py  otherimports.py  typehints.py
