[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashkeras"
version = "0.1.0"
description = "Package to fasten Keras manipulation and overall machine learning pipeline."
authors = [
    { name = "Diego Dias Fernandes", email = "diegodiasfernandes.comp@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
homepage = "https://github.com/diegodiasfernandes/flashkeras"

dependencies = [
    "tensorflow==2.15.0",
    "matplotlib==3.9.2",
    "opencv-python==4.10.0.84",
    "pandas==2.2.2",
    "scikit-learn==1.5.1"
]

[project.urls]
"Source" = "https://github.com/diegodiasfernandes/flashkeras"
"Tracker" = "https://github.com/diegodiasfernandes/flashkeras/issues"
